<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="5dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/welcome_to_pexel_photo_and_video_grabber"
        android:textAppearance="@style/TextAppearance.MyTheme.Headline1"
        android:gravity="center"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/query_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="?colorSecondary"
        android:text="@string/what_would_you_like_to_search_for"
        android:layout_marginTop="20dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_query"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toEndOf="@id/query_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?colorPrimary"
        android:layout_marginTop="20dp"
        android:hint="@string/search"
        android:inputType="text"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/query_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="?colorSecondary"
        android:text="@string/number_of_pictures_you_want"
        android:layout_marginTop="20dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_numberOfPictuers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/query_title"
        app:layout_constraintStart_toEndOf="@id/query_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?colorPrimary"
        android:layout_marginTop="20dp"
        android:hint="@string/number"
        android:inputType="number"/>

    <RadioGroup
        android:id="@+id/photo_video_rbtext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_title"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_for_photos_or_videos"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline4"
            android:textColor="?colorOnPrimary"
            android:gravity="center"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photos"
            android:textColor="?colorOnPrimary"
            android:buttonTint="?colorPrimary"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/videos"
            android:textColor="?colorOnPrimary"
            android:buttonTint="?colorPrimary"/>

    </RadioGroup>

    <RadioGroup
        android:id="@+id/orientation_rb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo_video_rbtext"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orientation_optional"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline4"
            android:textColor="?colorOnPrimary"
            android:gravity="center"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/landscape"
            android:textColor="?colorOnPrimary"
            android:buttonTint="?colorPrimary"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/portrait"
            android:textColor="?colorOnPrimary"
            android:buttonTint="?colorPrimary"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/square"
            android:textColor="?colorOnPrimary"
            android:buttonTint="?colorPrimary"/>

    </RadioGroup>

    <RadioGroup
        android:id="@+id/size_rb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/orientation_rb"
        app:layout_constraintTop_toBottomOf="@id/photo_video_rbtext"
        android:layout_marginStart="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size_optional"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline4"
            android:textColor="?colorOnPrimary"
            android:gravity="center"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/large"
            android:textColor="?colorOnPrimary"
            android:buttonTint="?colorPrimary"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:textColor="?colorOnPrimary"
            android:buttonTint="?colorPrimary"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small"
            android:textColor="?colorOnPrimary"
            android:buttonTint="?colorPrimary"/>

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/regular_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/orientation_rb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/search"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/by_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/regular_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/or_search_by_id"
        android:textAppearance="@style/TextAppearance.MyTheme.Headline3"
        android:textColor="?colorPrimary"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/by_id_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/by_id_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?colorPrimary"
        android:inputType="number"
        android:hint="@string/search_by_id_ex_1098365"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_by_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/by_id_editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/search_by_id"/>

</androidx.constraintlayout.widget.ConstraintLayout>